--- a/src/classes/AccountProcessorTest.cls
+++ b/src/classes/AccountProcessorTest.cls
@@ -1,3 +1,8 @@
-public class AccountProcessorTest {
-
+@IsTest
+private class AccountProcessorTest {
+	@IsTest
+    private static void testFieldCount(){
+        
+        
+    }
 }
